fix: remove space below add servers button and align the mt5 accounts list when carousel nav is available

--- a/packages/components/src/components/carousel/carousel.scss
+++ b/packages/components/src/components/carousel/carousel.scss
@@ -4,6 +4,10 @@
     flex-direction: column;
     justify-content: space-between;
 
+    &--mt5 {
+        justify-content: unset;
+    }
+
     &__container {
         display: flex;
         flex-direction: row;
@@ -12,6 +16,10 @@
     }
     &__box {
         overflow: hidden;
+
+        &--mt5 {
+            margin-left: -2.4rem;
+        }
     }
     &__wrapper {
         display: flex;
@@ -49,6 +57,9 @@
             margin: 0 auto;
             position: relative;
         }
+        &--lower {
+            margin-bottom: 0;
+        }
         &-item {
             width: 0.8rem;
             height: 0.8rem;
@@ -68,5 +79,10 @@
     }
     &__icon {
         cursor: pointer;
+
+        &--left {
+            position: relative;
+            right: 5.2rem;
+        }
     }
 }
